--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Position no CSS</title>
 </head>
 <body>
     <header>
-
-        <nav>
-            <ul>
-                <li>
-                    <a href="">None</a>
-                </li>
-                <li>
-                    <a href="">Position: static</a>
-                </li>
-                <li>
-                    <a href="">Position: absolute</a>
-                </li>
-                <li>
-                    <a href="">Position: fixed</a>
-                </li>
-            </ul>
-        </nav>
-        <h1>Position no CSS</h1>
+        <div class="header-conteiner">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="">None</a>
+                    </li>
+                    <li>
+                        <a href="">Position: static</a>
+                    </li>
+                    <li>
+                        <a href="">Position: absolute</a>
+                    </li>
+                    <li>
+                        <a href="">Position: fixed</a>
+                    </li>
+                </ul>
+            </nav>
+            <h1>Position no CSS</h1>
+        </div>
 
     </header>
     
