--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                         <a href="">None</a>
                     </li>
                     <li>
-                        <a href="">Position: static</a>
+                        <a href="static">Position: static</a>
                     </li>
                     <li>
-                        <a href="">Position: absolute</a>
+                        <a href="absolute">Position: absolute</a>
                     </li>
                     <li>
-                        <a href="">Position: fixed</a>
+                        <a href="fixed">Position: fixed</a>
                     </li>
                 </ul>
             </nav>
@@ -32,6 +32,20 @@
         </div>
 
     </header>
+    <main id="main-conteiner">
+        <section id="static">
+            <h2>Position: static</h2>
+            <p></p>
+        </section>
+        <section id="absolute">
+            <h2>Position: absolute</h2>
+            <p></p>
+        </section>
+        <section id="fixed">
+            <h2>Position: fixed</h2>
+            <p></p>
+        </section>
+    </main>
     
 </body>
 </html>
