--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="">None</a>
+                        <a href="">Home</a>
                     </li>
                     <li>
                         <a href="static">Position: static</a>
@@ -35,15 +35,45 @@
     <main id="main-conteiner">
         <section id="static">
             <h2>Position: static</h2>
-            <p></p>
-        </section>
+            <p>Bem-vindo ao gerador de palavras aleatórias em português, com ele, você pode criar palavras aleatoriamente para jogos como Pictionary. Por exemplo, uma pessoa pode gerar uma palavra sem que outras pessoas a vejam, faz um desenho e as outras pessoas têm que adivinhar qual é a palavra. Também pode servir para fazer exercícios de criatividade,
+                 memorização, ou o que quiser
+                Cada vez que você clicar no botão 'Nova palavra', uma nova palavra aleatória será gerada.
+                Você pode escolher entre a lista de 4000 palavras aleatórias ou a lista reduzida de 500 palavras para crianças. E também pode escolher o idioma que desejar. Se encontrar alguma palavra que contenha um erro ou acha que não é conveniente, escreva-nos, nos informando o motivo e levaremos isso em con
+                sideração. Pode utilizar o seguinte formulário para fazê-lo (não é necessário fornecer o seu e-mail): [Contato].
+                Novidade! Adicionamos novos dicionários de alimentos, animais, cores, partes do corpo humano, educação, família, figuras geométricas, mídia de comunicação, números, números de 0 a 9, profissões e transporte.</p>
+                <p>Bem-vindo ao gerador de palavras aleatórias em português, com ele, você pode criar palavras aleatoriamente para jogos como Pictionary. Por exemplo, uma pessoa pode gerar uma palavra sem que outras pessoas a vejam, faz um desenho e as outras pessoas têm que adivinhar qual é a palavra. Também pode servir para fazer exercícios de criatividade,
+                    memorização, ou o que quiser
+                   Cada vez que você clicar no botão 'Nova palavra', uma nova palavra aleatória será gerada.
+                   Você pode escolher entre a lista de 4000 palavras aleatórias ou a lista reduzida de 500 palavras para crianças. E também pode escolher o idioma que desejar. Se encontrar alguma palavra que contenha um erro ou acha que não é conveniente, escreva-nos, nos informando o motivo e levaremos isso em con
+                   sideração. Pode utilizar o seguinte formulário para fazê-lo (não é necessário fornecer o seu e-mail): [Contato].
+                   Novidade! Adicionamos novos dicionários de alimentos, animais, cores, partes do corpo humano, educação, família, figuras geométricas, mídia de comunicação, números, números de 0 a 9, profissões e transporte.</p>
+                   <p>Bem-vindo ao gerador de palavras aleatórias em português, com ele, você pode criar palavras aleatoriamente para jogos como Pictionary. Por exemplo, uma pessoa pode gerar uma palavra sem que outras pessoas a vejam, faz um desenho e as outras pessoas têm que adivinhar qual é a palavra. Também pode servir para fazer exercícios de criatividade,
+                    memorização, ou o que quiser
+                   Cada vez que você clicar no botão 'Nova palavra', uma nova palavra aleatória será gerada.
+                   Você pode escolher entre a lista de 4000 palavras aleatórias ou a lista reduzida de 500 palavras para crianças. E também pode escolher o idioma que desejar. Se encontrar alguma palavra que contenha um erro ou acha que não é conveniente, escreva-nos, nos informando o motivo e levaremos isso em con
+                   sideração. Pode utilizar o seguinte formulário para fazê-lo (não é necessário fornecer o seu e-mail): [Contato].
+                   Novidade! Adicionamos novos dicionários de alimentos, animais, cores, partes do corpo humano, educação, família, figuras geométricas, mídia de comunicação, números, números de 0 a 9, profissões e transporte.</p>
+                </section>
         <section id="absolute">
             <h2>Position: absolute</h2>
-            <p></p>
+
+            <div class="bandeira-japao"></div>
+            <div class="circulo-vermelho"></div>
+            <p>Bem-vindo ao gerador de palavras aleatórias em português, com ele, você pode criar palavras aleatoriamente para jogos como Pictionary. Por exemplo, uma pessoa pode gerar uma palavra sem que outras pessoas a vejam, faz um desenho e as outras pessoas têm que adivinhar qual é a palavra. Também pode servir para fazer exercícios de criatividade,
+                memorização, ou o que quiser
+               Cada vez que você clicar no botão 'Nova palavra', uma nova palavra aleatória será gerada.
+               Você pode escolher entre a lista de 4000 palavras aleatórias ou a lista reduzida de 500 palavras para crianças. E também pode escolher o idioma que desejar. Se encontrar alguma palavra que contenha um erro ou acha que não é conveniente, escreva-nos, nos informando o motivo e levaremos isso em con
+               sideração. Pode utilizar o seguinte formulário para fazê-lo (não é necessário fornecer o seu e-mail): [Contato].
+               Novidade! Adicionamos novos dicionários de alimentos, animais, cores, partes do corpo humano, educação, família, figuras geométricas, mídia de comunicação, números, números de 0 a 9, profissões e transporte.</p>
         </section>
         <section id="fixed">
             <h2>Position: fixed</h2>
-            <p></p>
+            <p>Bem-vindo ao gerador de palavras aleatórias em português, com ele, você pode criar palavras aleatoriamente para jogos como Pictionary. Por exemplo, uma pessoa pode gerar uma palavra sem que outras pessoas a vejam, faz um desenho e as outras pessoas têm que adivinhar qual é a palavra. Também pode servir para fazer exercícios de criatividade,
+                memorização, ou o que quiser
+               Cada vez que você clicar no botão 'Nova palavra', uma nova palavra aleatória será gerada.
+               Você pode escolher entre a lista de 4000 palavras aleatórias ou a lista reduzida de 500 palavras para crianças. E também pode escolher o idioma que desejar. Se encontrar alguma palavra que contenha um erro ou acha que não é conveniente, escreva-nos, nos informando o motivo e levaremos isso em con
+               sideração. Pode utilizar o seguinte formulário para fazê-lo (não é necessário fornecer o seu e-mail): [Contato].
+               Novidade! Adicionamos novos dicionários de alimentos, animais, cores, partes do corpo humano, educação, família, figuras geométricas, mídia de comunicação, números, números de 0 a 9, profissões e transporte.</p>
         </section>
     </main>
     
